@@ -1,5 +1,8 @@
 2016-11-20  Jérôme Pasquier  <rainbru@free.fr>
 
+	* src/client/GameEngine.cpp (reconfigure): copy last renderer's
+	config map to new one.
+
 	* src/client/GameEngine.cpp (reconfigure): fully restarting with correct
 	fullscreen status now works.
 	* src/client/GameEngine.hpp (initialiseOis): new member function.
